# wikipedia-rag

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md  MIGRATION.md  Makefile  QUICKSTART.md  README.md  TODO.md  docker-compose.yml  main.py  pyproject.toml
demo/: demo_phase2.py  demo_phase3.py  demo_phase5.py
docs/: BUGFIX_SYSTEM_ROLE.md  INITIAL_PROMPT.md  LMSTUDIO_COMPATIBILITY.md  MVP_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE5_COMPLETE.md  PHASE7_COMPLETE.md  SESSION_SUMMARY.md  UV_GUIDE.md  cursor_chatbot_mvp_development_roadmap.md
src/: __init__.py
src/adapters/: __init__.py  chroma_adapter.py  llm_adapter.py  lmstudio_adapter.py  vectordb_adapter.py
src/models/: __init__.py  schemas.py
src/services/: __init__.py  document_processor.py  embedding_service.py  rag_service.py  wikipedia_scraper.py
src/utils/: __init__.py  config.py  logger.py
tests/: __init__.py  test_chroma_adapter.py  test_document_processor.py  test_embedding_service.py  test_lmstudio_adapter.py  test_wikipedia_scraper.py
